[package]
name = "bitcoin_snp_covariance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
